# Sagacity

./: ActivationFunction.cpp  ActivationFunction.hpp  CMakeLists.txt  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  README.md  Vector.cpp  Vector.hpp
Tests/: CMakeLists.txt  NetworkTests.cpp
